syntax = "proto2";

import "execute_kind.proto";


option optimize_for = SPEED;
option java_package = "com.dfire.protocol";
option java_outer_classname = "RpcCancelMessage";

message CancelMessage {
    required ExecuteKind ek = 1;
    required string id = 2;
}

