syntax = "proto2";

option optimize_for = SPEED;
option java_package = "com.dfire.protocol";
option java_outer_classname = "RpcExecuteMessage";

message ExecuteMessage {

    required string actionId = 1;
    optional sint32 exitCode = 2;
}