syntax = "proto2";

option optimize_for = SPEED;
option java_package = "com.dfire.protocol";
option java_outer_classname = "RpcManualMessage";

message ManualMessage {
    required string historyId = 1;
    optional sint32 exitCode = 2;
}